--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button class="select-product-btn" data-product="panaderia-leudantes">Leudantes y Mejoradores</button>
                 <button class="select-product-btn" data-product="panaderia-margarina">Margarinas y Mantequillas</button>
                 <hr>
-                <h4>Pasteleria</h4>
+                <h4>Pastelería</h4>
                 <button class="select-product-btn" data-product="pasteleria-color">Color y Sabor</button>
                 <button class="select-product-btn" data-product="pasteleria-cremas">Cremas</button>
                 <button class="select-product-btn" data-product="pasteleria-espejos">Espejos para pastel</button>
@@ -282,7 +282,7 @@
                         <li>Con un par de gotas obtén colores intensos</li>
                         <li>Amplia variedad de colores</li>
                         <li>No altera el sabor de tu receta</li>
-                        <li>Caja con 10 piezas. de 40 g c/u</li>
+                        <li>Caja con 10 piezas de 40 g c/u</li>
                     </ul>
                     <div class="data-ft-container">
                         <div class="data-ft-product">
